Fix z-index issue
Z-index with position absolute in sass would disable all links

--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -10,7 +10,7 @@ body {
   color: $dark-grey;
   font-family: 'Open Sans', sans-serif;
   font-size: $m-size;
-  line-height: 1.6;
+  line-height: 1.2;
 }
 
 button {
