--- a/src/styles/base/_settings.scss
+++ b/src/styles/base/_settings.scss
@@ -7,10 +7,10 @@ $dark-green: #1D2220;
 $white: #FCF8F6;
 $light-grey: #FCF8F6;
 
-$cover-blue: #368CC7;
-$cover-yellow: #F3B736;
-$cover-red: #BE213A;
-$cover-green: #5C8742;
+$cover-blue: rgba(54, 140, 199, 0.7);
+$cover-yellow: rgba(243, 183, 54, 0.7);
+$cover-red: rgba(190, 33, 58, 0.7);
+$cover-green: rgba(92, 135, 66, 0.7);
 
 $colors-list: $cover-blue, $cover-yellow, $cover-red, $cover-green;
 
